# messages-package

./: .flake8  .pylintrc  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pr.yaml  release.yaml  tests.yaml  tests.yml
messages/: __init__.py  exceptions.py  messages.py
messages/configs/: messages.json
tests/: test_render_progressbar.py  test_render_template.py
tests/configs/: messages.json
