[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messages"
version = "1.0.0"
description = "This package helps to easily and quickly generate beautiful messages for telegram bots using templates described in json."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Bervinov Oleg", email="obervinov@pm.me" },
]
maintainers = [
    { name="Bervinov Oleg", email="obervinov@pm.me" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/obervinov/messages-package"
"Repository" = "https://github.com/obervinov/messages-package"
"Bug Tracker" = "https://github.com/obervinov/messages-package/issues"
"Documentation" = "https://github.com/obervinov/messages-package/blob/main/README.md"
"Changelog" = "https://github.com/obervinov/messages-package/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.6.2"
emoji = "^2.2.0"