[tool.poetry]
name = "messages"
version = "1.0.3"
description = "This package helps to easily and quickly generate beautiful messages for telegram bots using templates described in json."
authors = ["Bervinov Oleg <obervinov@pm.me>"]
maintainers = ["Bervinov Oleg <obervinov@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "messages"}]
homepage = "https://github.com/obervinov/messages-package"
repository = "https://github.com/obervinov/messages-package"
documentation = "https://github.com/obervinov/messages-package/blob/main/README.md"
keywords = ["messages", "messages-bot", "messages-telebot", "messages-telegram-bot"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/messages-package/issues"

[tool.poetry.dependencies]
python = "^3.10"
emoji  = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
